--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-native-webview": "11.15.0",
+    "react-native-safe-area-context": "3.3.2",
+    "expo-camera": "~12.1.2",
+    "expo-av": "~10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
